2023-08-19T00:32:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5908333863 # 1829
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: last 14d: unq all: 59 114
* notice: prev accum: outdated-unq outdated-all / unq all: 1453 4899 / 1546 5033
* notice: next accum: outdated-unq outdated-all / unq all: 1468 4919 / 1546 5033
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-04] / []

2023-08-18T00:34:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5897367973 # 1826
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: last 14d: unq all: 71 134
* notice: prev accum: outdated-unq outdated-all / unq all: 1453 4899 / 1546 5032
* notice: next accum: outdated-unq outdated-all / unq all: 1453 4899 / 1546 5033
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-08-17]

2023-08-17T08:09:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5888388142 # 1824
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-17
* notice: last 14d: unq all: 71 133
* notice: prev accum: outdated-unq outdated-all / unq all: 1453 4899 / 1545 5031
* notice: next accum: outdated-unq outdated-all / unq all: 1453 4899 / 1546 5032
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-17]

2023-08-17T00:33:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5885292377 # 1823