@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-06T00:38:57Z",
-  "count" : 6,
+  "timestamp" : "2023-08-19T08:08:30Z",
+  "count" : 5,
   "count_minmax" : [ 1, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 6,
+  "count_decinc" : [ -1, +6 ],
+  "uniques" : 5,
   "uniques_minmax" : [ 1, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "uniques_decinc" : [ -1, +6 ]
 }
