@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-08-19T00:32:54Z",
+  "timestamp" : "2023-08-19T08:08:30Z",
   "count_outdated" : 4919,
   "uniques_outdated" : 1468,
-  "count" : 5033,
-  "uniques" : 1546,
+  "count" : 5037,
+  "uniques" : 1550,
   "clones" : [
     {
       "timestamp": "2023-08-05T00:00:00Z",
-      "count": 6,
+      "count": 5,
       "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 6,
+      "count_decinc": [ 1, 6 ],
+      "uniques": 5,
       "uniques_minmax": [ 1, 6 ],
-      "uniques_decinc": [ 0, 6 ]
+      "uniques_decinc": [ 1, 6 ]
     },
     {
       "timestamp": "2023-08-06T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-19T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
