@@ -1,11 +1,11 @@
 {
-  "count": 114,
-  "uniques": 59,
+  "count": 117,
+  "uniques": 62,
   "clones": [
     {
       "timestamp": "2023-08-05T00:00:00Z",
-      "count": 6,
-      "uniques": 6
+      "count": 5,
+      "uniques": 5
     },
     {
       "timestamp": "2023-08-06T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2023-08-17T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-19T00:00:00Z",
+      "count": 4,
+      "uniques": 4
     }
   ]
 }
