@@ -1,3 +1,12 @@
+2023-08-19T08:08:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5910326487 # 1830
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
+* notice: last 14d: unq all: 62 117
+* notice: prev accum: outdated-unq outdated-all / unq all: 1468 4919 / 1546 5033
+* notice: next accum: outdated-unq outdated-all / unq all: 1468 4919 / 1550 5037
+* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -1 -1 / +4 +4 -0 -0 / 4 4
+* notice: removed / changed dates: [] / [2023-08-05 2023-08-19]
+
 2023-08-19T00:32:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5908333863 # 1829
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
